// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Compilation Tests: Code Transformation > should allow custom inline identifier > /Users/carl/Code/unplugin-inline/tests/fixtures/custom-identifier.ts 1`] = `
"let _subtractResult;
_subtractLabel: {
  const _arg_a = 10;
  const _arg_b = 5;
  _subtractResult = _arg_a - _arg_b;
  break _subtractLabel;
}
const result = _subtractResult;
export {
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should correct loop scoping when inlined inside a loop > /Users/carl/Code/unplugin-inline/tests/fixtures/loop-scoping.ts 1`] = `
"const results = [];
for (let i = 0; i < 3; i++) {
  let _squareResult;
  _squareLabel: {
    const _arg_n = i;
    const _t_res = _arg_n * _arg_n;
    _squareResult = _t_res;
    break _squareLabel;
  }
  results.push(_squareResult);
}
const output = results;
export {
  output
};
"
`;

exports[`Compilation Tests: Code Transformation > should handle functions with no return value (void) > /Users/carl/Code/unplugin-inline/tests/fixtures/void-function.ts 1`] = `
"let input = {
  a: 2
};
let _doSomethingResult;
_doSomethingLabel: {
  const _arg_obj = input;
  _arg_obj.a += 1;
  _doSomethingResult = void 0;
  break _doSomethingLabel;
}
const res = _doSomethingResult;
const finalSideEffect = input;
export {
  finalSideEffect,
  res
};
"
`;

exports[`Compilation Tests: Code Transformation > should handle multiple return statements > /Users/carl/Code/unplugin-inline/tests/fixtures/early-return.ts 1`] = `
"let _isPositiveResult;
_isPositiveLabel: {
  const _arg_n = 10;
  if (_arg_n > 0) {
    _isPositiveResult = true;
    break _isPositiveLabel;
  }
  _isPositiveResult = false;
  break _isPositiveLabel;
}
const pos = _isPositiveResult;
let _isPositiveResult2;
_isPositiveLabel2: {
  const _arg_n = -5;
  if (_arg_n > 0) {
    _isPositiveResult2 = true;
    break _isPositiveLabel2;
  }
  _isPositiveResult2 = false;
  break _isPositiveLabel2;
}
const neg = _isPositiveResult2;
export {
  neg,
  pos
};
"
`;

exports[`Compilation Tests: Code Transformation > should handle parameter mapping correctly > /Users/carl/Code/unplugin-inline/tests/fixtures/complex-params.ts 1`] = `
"let counter = 0;
function inc() {
  return ++counter;
}
let _multiplyResult;
_multiplyLabel: {
  const _arg_a = inc();
  const _arg_b = inc();
  _multiplyResult = _arg_a * _arg_b;
  break _multiplyLabel;
}
const result = _multiplyResult;
const finalCounter = counter;
export {
  finalCounter,
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should inline a simple arrow function returning a literal > /Users/carl/Code/unplugin-inline/tests/fixtures/simple-add-arrow.ts 1`] = `
"let _addResult;
_addLabel: {
  const _arg_a = 5;
  const _arg_b = 10;
  _addResult = _arg_a + _arg_b;
  break _addLabel;
}
const result = _addResult;
export {
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should inline a simple function returning a literal > /Users/carl/Code/unplugin-inline/tests/fixtures/simple-add.ts 1`] = `
"let _addResult;
_addLabel: {
  const _arg_a = 10;
  const _arg_b = 20;
  _addResult = _arg_a + _arg_b;
  break _addLabel;
}
const result = _addResult;
export {
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should not inline functions without @inline comment > /Users/carl/Code/unplugin-inline/tests/fixtures/no-inline.ts 1`] = `
"function keepMe() {
  return 1;
}
const k = keepMe();
export {
  k
};
"
`;

exports[`Compilation Tests: Code Transformation > should properly scope variables to avoid collisions > /Users/carl/Code/unplugin-inline/tests/fixtures/variable-collision.ts 1`] = `
"const x = 100;
const outerX = x;
let _getInnerXResult;
_getInnerXLabel: {
  const _t_x = 5;
  _getInnerXResult = _t_x;
  break _getInnerXLabel;
}
const innerX = _getInnerXResult;
export {
  innerX,
  outerX
};
"
`;

exports[`Compilation Tests: Code Transformation > should work on global function dependencies > /Users/carl/Code/unplugin-inline/tests/fixtures/math-global.ts 1`] = `
"let _sqrtResult;
_sqrtLabel: {
  const _arg_a = 24;
  _sqrtResult = Math.sqrt(_arg_a);
  break _sqrtLabel;
}
const result = _sqrtResult;
export {
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should work on imported inlined functions > /Users/carl/Code/unplugin-inline/tests/fixtures/imported-function.ts 1`] = `
"let _exportedAddResult;
_exportedAddLabel: {
  const _arg_a = 1;
  const _arg_b = 2;
  _exportedAddResult = _arg_a + _arg_b;
  break _exportedAddLabel;
}
const result = _exportedAddResult;
export {
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should work on missing arguments > /Users/carl/Code/unplugin-inline/tests/fixtures/missing-arguments.js 1`] = `
"let _addOptionalResult;
_addOptionalLabel: {
  const _arg_a = 10;
  const _arg_b = void 0;
  _addOptionalResult = _arg_b === void 0 ? _arg_a : _arg_a + _arg_b;
  break _addOptionalLabel;
}
const result = _addOptionalResult;
export {
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should work on missing arguments > /Users/carl/Code/unplugin-inline/tests/fixtures/missing-arguments.ts 1`] = `
"let _addOptionalResult;
_addOptionalLabel: {
  const _arg_a = 10;
  const _arg_b = void 0;
  _addOptionalResult = _arg_b === void 0 ? _arg_a : _arg_a + _arg_b;
  break _addOptionalLabel;
}
const result = _addOptionalResult;
export {
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should work on nested function calls > /Users/carl/Code/unplugin-inline/tests/fixtures/nested-inline-calls.js 1`] = `
"let _quadrupleResult;
_quadrupleLabel: {
  const _arg_n = 10;
  let _t__doubleResult;
  _doubleLabel: {
    const _t__arg_n = _t__arg_n;
    _t__doubleResult = _t__arg_n * 2;
    break _doubleLabel;
  }
  _quadrupleResult = _t__doubleResult * 2;
  break _quadrupleLabel;
}
const val = _quadrupleResult;
export {
  val
};
"
`;

exports[`Compilation Tests: Code Transformation > should work on nested function calls > /Users/carl/Code/unplugin-inline/tests/fixtures/nested-inline-calls.ts 1`] = `
"let _quadrupleResult;
_quadrupleLabel: {
  const _arg_n2 = 10;
  let _t__doubleResult;
  _doubleLabel: {
    const _t__arg_n = _arg_n2;
    _t__doubleResult = _t__arg_n * 2;
    break _doubleLabel;
  }
  _quadrupleResult = _t__doubleResult * 2;
  break _quadrupleLabel;
}
const val = _quadrupleResult;
export {
  val
};
"
`;

exports[`Compilation Tests: Code Transformation > should work on nested functions > /Users/carl/Code/unplugin-inline/tests/fixtures/nested-function.js 1`] = `
"let _withNestedResult;
_withNestedLabel: {
  const _arg_val = 5;
  const _t_innerAdder = (x) => {
    return x + val;
  };
  _withNestedResult = _t_innerAdder(10);
  break _withNestedLabel;
}
const result = _withNestedResult;
export {
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should work on nested functions > /Users/carl/Code/unplugin-inline/tests/fixtures/nested-function.ts 1`] = `
"let _withNestedResult;
_withNestedLabel: {
  const _arg_val = 5;
  const _t_innerAdder = (x) => {
    return x + _arg_val;
  };
  _withNestedResult = _t_innerAdder(10);
  break _withNestedLabel;
}
const result = _withNestedResult;
export {
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should work on plain JS files (without TS syntax) > /Users/carl/Code/unplugin-inline/tests/fixtures/plain-js.js 1`] = `
"let _multiplyResult;
_multiplyLabel: {
  const _arg_a = 2;
  const _arg_b = 3;
  _multiplyResult = _arg_a * _arg_b;
  break _multiplyLabel;
}
exports.res = _multiplyResult;
"
`;
